<resources>
    <string name="app_name">MediaPlayer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currently_watching">Currently watching:</string>
    <string name="back">BACK</string>
    <string name="selected_file">Selected file</string>
    <string name="no_file_selected">No file has been selected</string>
    <string name="format">Format:</string>
    <string name="duration">Duration:</string>
    <string name="resolution">Resolution:</string>
    <string name="title">Title:</string>
</resources>
