<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment"
    android:id="@+id/fragment_container"
    android:orientation="vertical">


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/currently_watching"
        android:textColor="#99FCFCFC"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="NestedWeights">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/textForVideo"
                android:text="@string/title"
                android:textStyle="bold"
                android:textColor="#99FCFCFC"
                android:layout_gravity="center"
                android:gravity="start"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/textForVideoResolution"
                android:text="@string/resolution"
                android:textStyle="bold"
                android:textColor="#99FCFCFC"
                android:layout_gravity="center"
                android:gravity="start" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/textForVideoDuration"
                android:text="@string/duration"
                android:textStyle="bold"
                android:textColor="#99FCFCFC"
                android:layout_gravity="center"
                android:gravity="start" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/textForVideoFormat"
                android:textStyle="bold"
                android:textColor="#99FCFCFC"
                android:layout_gravity="center"
                android:gravity="start"
                android:text="@string/format"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/textViewForVideo"
                android:textColor="#99FCFCFC"
                android:layout_gravity="center"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/textViewForVideoResolution"
                android:textColor="#99FCFCFC"
                android:layout_gravity="center"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/textViewForVideoDuration"
                android:textColor="#99FCFCFC"
                android:layout_gravity="center"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/textViewForVideoFormat"
                android:textColor="#99FCFCFC"
                android:layout_gravity="center"
                android:gravity="center_horizontal" />

        </LinearLayout>
    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="20dp"
        android:id="@+id/btn"
        android:text="@string/back"
        android:background="@drawable/button_background"
        android:layout_gravity="center_horizontal"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>


</LinearLayout>